# nerdfont-codepoints

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: GenerateNerdFontsHeader.yml  UpdateVcpkgRepository.yml
cmake/: config.cmake.in
conan/: conanfile.py  requirements.txt  setup.ps1
conan/test_package/: CMakeLists.txt  conanfile.py
conan/test_package/src/: example.cpp
generator/: GenerateNerdFontsHeader.go
include/: NerdFont.h
nerdfont-codepoints/: CMakeLists.txt
nerdfont-codepoints/cmake/: config.cmake.in
